[gd_scene load_steps=8 format=3 uid="uid://b2ew46dlu7u7x"]

[ext_resource type="Script" path="res://Player/GrenadeLauncher.gd" id="1_n50mh"]
[ext_resource type="Material" uid="uid://dus6jtbfyqwj8" path="res://Player/GrenadeVisuals/aim_material.tres" id="2_qr0pg"]
[ext_resource type="Material" uid="uid://b6h7p7jogt6ep" path="res://Player/GrenadeVisuals/trajectory_material.tres" id="3_s7dm5"]
[ext_resource type="Script" path="res://addons/GD-Sync/Scripts/Types/NodeInstantiator.gd" id="4_j6gft"]
[ext_resource type="PackedScene" uid="uid://bq562nfq7puh" path="res://Player/Grenade.tscn" id="5_wnc0k"]

[sub_resource type="PlaneMesh" id="PlaneMesh_we0uy"]

[sub_resource type="SphereShape3D" id="SphereShape3D_22ctb"]
radius = 0.25

[node name="GrenadeLauncher" type="Node3D"]
script = ExtResource("1_n50mh")
gravity = 16.0

[node name="SnapMesh" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
top_level = true

[node name="AimSprite" type="MeshInstance3D" parent="SnapMesh"]
material_override = ExtResource("2_qr0pg")
mesh = SubResource("PlaneMesh_we0uy")
skeleton = NodePath("../..")

[node name="AimSprite2" type="MeshInstance3D" parent="SnapMesh"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
material_override = ExtResource("2_qr0pg")
mesh = SubResource("PlaneMesh_we0uy")
skeleton = NodePath("../..")

[node name="LaunchPoint" type="Marker3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.305, 0)
gizmo_extents = 0.5

[node name="ShapeCast3D" type="ShapeCast3D" parent="LaunchPoint"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.06958, 0)
shape = SubResource("SphereShape3D_22ctb")
max_results = 1
collision_mask = 2
debug_shape_custom_color = Color(0.839216, 0.619608, 0.207843, 1)

[node name="TrailMeshInstance" type="MeshInstance3D" parent="LaunchPoint"]
unique_name_in_owner = true
material_override = ExtResource("3_s7dm5")

[node name="GrenadeInstantiator" type="Node" parent="."]
script = ExtResource("4_j6gft")
target_location = NodePath("")
scene = ExtResource("5_wnc0k")
replicate_on_join = true
sync_starting_changes = true
excluded_properties = PackedStringArray()
